# modelctl

./: CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml
docs/: model-lifecycle.md
examples/: deepseek-v4-flash-ssd.example.toml  mlx-lm.example.toml
modelctl/: __init__.py  bench_artifacts.py  cli.py  fleet.py  ingest.py  intake.py  manifest.py  mlx.py  ops.py  registry.py  report.py  runner.py  service.py
tests/: __init__.py  test_modelctl.py
