[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "local-modelctl"
version = "0.18.0"
description = "Manifest-driven lifecycle control for local LLM servers."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{name = "OpenClaw"}]
keywords = ["llm", "local-inference", "llama.cpp", "mlx", "model-server", "apple-silicon"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: System :: Systems Administration",
]

[project.scripts]
modelctl = "modelctl.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["modelctl*"]
